- Fixed job descriptions listing full branches path
- Fixed required training handles not working in IE
- Fixed professor account being affected by course rules
- Fixed archive sorting not working
- Removed refereneces to deprecated mb_ereg_replace()
- Fixed scorm export not taking into account media files
- Added link in unit operations to open unit in popup window

=== Version 3.6.3 build 7602 ===
- Added disable payments option
- Added toggle editor in html mode in all editor instances
- Added unit option for extending object at screen dimensions
- Replacing textbox with textarea in comment field of project score
- Fixed progress not displaying projects issue
- Fixed error while sending messages to "My students" from professor account
- Fixed path error when creating new user
- Fixed user type assignments when registering automatically to courses/lessons through a default group
- Fixed memory overconsumption during calculation of users' traffic statistics
- Fixed memory_get_peak_usage() call for php 5.1.x when debug_mode is on
- Fixed deactivated lessons showing up in catalog
- Fixed certain branches not showing up on branches select lists
- Fixed submitting notification settings when "Maximum minutes ..." was not set
- Fixed bookmark addition error
- Disabled periodic updater during restore
- Fixed issue about sending messages with recipients of specific lesson
- Added dates to user reports, where applicable

=== Version 3.6.3 build 7455 ===
- Fixed error in course completion page
- Fixed lesson assignment to users issue

=== Version 3.6.3 build 7417 ===
- Added course instances functionality (educational/enterprise)
- Added feedback functionality
- Added curriculum functionality (educational/enterprise)
- Added enterprise options to system settings (educational/enterprise)
- Added find user functionality and paired them closely to groups (educational/enterprise)
- Added quick upgrade functionality
- Added purge logs functionality in admin -> maintenance