@@ -1072,7 +1072,7 @@ class EfrontCourse
   }
   $roles = $this -> getPossibleCourseRoles();
   $courseUsers = $this -> getUsers();
-  if (in_array($user, array_keys($courseUsers)) && $roles[$courseUsers[$user]['role']] = 'student') {
+  if (in_array($user, array_keys($courseUsers)) && $roles[$courseUsers[$user]['role']] == 'student') {
    return true;
   } else {
    return false;
@@ -1101,7 +1101,7 @@ class EfrontCourse
   }
   $roles = $this -> getPossibleCourseRoles();
   $courseUsers = $this -> getUsers();
-  if (in_array($user, array_keys($courseUsers)) && $roles[$courseUsers[$user]['role']] = 'professor') {
+  if (in_array($user, array_keys($courseUsers)) && $roles[$courseUsers[$user]['role']] == 'professor') {
    return true;
   } else {
    return false;
